--- a/elapp/src/main/res/drawable/selector_home_search.xml
+++ b/elapp/src/main/res/drawable/selector_home_search.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/new_icon_search_pre" android:state_selected="true" />
-    <item android:drawable="@drawable/new_icon_search" android:state_selected="false" />
+    <item android:drawable="@drawable/new_icon_search_pre" android:state_pressed="true" />
+    <item android:drawable="@drawable/new_icon_search"/>
 </selector>
