--- a/elapp/src/main/res/layout/activity_home.xml
+++ b/elapp/src/main/res/layout/activity_home.xml
@@ -66,6 +66,7 @@
             android:id="@+id/enterHome"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="100dp"
             android:text="点我进入新的主页" />
 
         <FrameLayout
