--- a/elapp/src/main/res/layout/layout_home_toolbar.xml
+++ b/elapp/src/main/res/layout/layout_home_toolbar.xml
@@ -38,7 +38,7 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="@dimen/actionbar_shadow_height"
+        android:layout_height="1dp"
         android:layout_marginTop="?attr/actionBarSize"
         android:background="@drawable/shape_toolbar_shadow" />
 </RelativeLayout>
