--- a/elapp/src/main/res/values/colors.xml
+++ b/elapp/src/main/res/values/colors.xml
@@ -132,11 +132,18 @@
 
 
     <!--新版本的color标注-->
+    <color name="color_main">#662d80</color>
+    <color name="color_main_pressed">#55662d80</color>
+    <color name="color_titlebar_textcolor">#ffffff</color>
+
     <color name="hv662d80">#662d80</color>
+    <color name="hvaa662d80">#aa662d80</color>
+
     <color name="hv_toobar_shadow_start">#3d000000</color>
     <color name="hv_toobar_shadow_end">#08000000</color>
     <color name="hvaf99bc">#AF99BC</color>
     <color name="hv1b1720">#1B1720</color>
     <color name="hv676767">#676767</color>
     <color name="hv989898">#989898</color>
+    <color name="normal_gray_bg">#f4f4f4</color>
 </resources>
