--- a/elapp/src/main/res/drawable/personal_center_blue_round_btn_selector.xml
+++ b/elapp/src/main/res/drawable/personal_center_blue_round_btn_selector.xml
@@ -27,20 +27,20 @@
     <item android:state_selected="false" android:state_pressed="true">
         <shape>
             <solid
-                android:color="@color/login_btn_color"/>
+                android:color="@color/color_main"/>
             <corners
                 android:radius="3dp"/>
-            <stroke android:color="@color/login_btn_color"
+            <stroke android:color="@color/color_main"
                     android:width="1dp"/>
         </shape>
     </item>
     <item android:state_selected="false" android:state_pressed="false">
         <shape>
             <solid
-                android:color="@color/login_btn_color"/>
+                android:color="@color/color_main_pressed"/>
             <corners
                 android:radius="3dp"/>
-            <stroke android:color="@color/login_btn_color"
+            <stroke android:color="@color/color_main_pressed"
                     android:width="1dp"/>
         </shape>
     </item>
