--- a/elapp/src/main/res/drawable/round_btn_selector.xml
+++ b/elapp/src/main/res/drawable/round_btn_selector.xml
@@ -20,7 +20,7 @@
     <item android:state_selected="true">
         <shape>
             <solid
-                android:color="@color/btn_color_three_level"/>
+                android:color="@color/color_main_pressed"/>
             <corners
                 android:radius="3dp"/>
         </shape>
@@ -28,7 +28,7 @@
     <item android:state_selected="false" android:state_pressed="true">
         <shape>
             <solid
-                android:color="@color/btn_color_three_level"/>
+                android:color="@color/color_main_pressed"/>
             <corners
                 android:radius="3dp"/>
         </shape>
@@ -39,7 +39,7 @@
                 android:color="@android:color/transparent"/>
             <stroke
                 android:width="1dp"
-                android:color="@color/btn_color_three_level"/>
+                android:color="@color/color_main"/>
             <corners
                 android:radius="3dp"/>
         </shape>
