--- a/elapp/src/main/res/drawable/round_white_btn_bg.xml
+++ b/elapp/src/main/res/drawable/round_white_btn_bg.xml
@@ -5,9 +5,11 @@
   ~ All rights reserved.
   -->
 
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle"
+    >
     <corners
         android:radius="6dp"/>
     <stroke
-        android:color="@color/btn_color_secondary_level" android:width="0.5dp"/>
+        android:color="@color/white" android:width="0.5dp"/>
 </shape>
