--- a/elapp/src/main/res/layout/activity_copyright.xml
+++ b/elapp/src/main/res/layout/activity_copyright.xml
@@ -1,27 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-  ~ Copyright (c) 2016 EasyVaas.
-  ~ http://www.easyvaas.com
-  ~ All rights reserved.
-  -->
-
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    android:background="@color/background_color_gray"
     android:orientation="vertical">
-
+    <include
+        android:id="@+id/common_title_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        layout="@layout/common_header_layout"/>
     <TextView
         android:id="@+id/content_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
         android:layout_marginLeft="14dp"
         android:layout_marginRight="14dp"
+        android:layout_marginTop="32dp"
         android:text="@string/yihzibo_copyright"
-        android:textColor="@color/text_common"
-        android:textSize="@dimen/text_size_13"/>
-
+        android:textSize="@dimen/text_size_13" />
 </LinearLayout>
