--- a/elapp/src/main/res/layout/common_header_layout.xml
+++ b/elapp/src/main/res/layout/common_header_layout.xml
@@ -10,7 +10,7 @@
     android:id="@+id/message_top_title_rl"
     android:layout_width="match_parent"
     android:layout_height="@dimen/action_bar_height"
-    android:background="@color/white">
+    android:background="@color/color_main">
     <ImageView
         android:id="@+id/close_iv"
         android:layout_width="wrap_content"
@@ -26,7 +26,7 @@
         android:layout_height="@dimen/action_bar_height"
         android:gravity="center"
         android:textSize="@dimen/action_bar_menu_text_size"
-        android:textColor="@color/login_text_color_2"/>
+        android:textColor="@color/color_titlebar_textcolor"/>
     <LinearLayout
         android:id="@+id/add_option_view"
         android:layout_width="wrap_content"
@@ -41,7 +41,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/commit"
-            android:textColor="@color/btn_color_secondary_level"
+            android:textColor="@color/color_titlebar_textcolor"
             android:textSize="@dimen/text_size_title_h1"
             android:visibility="gone"/>
     </LinearLayout>
