--- a/elapp/src/main/res/values/styles.xml
+++ b/elapp/src/main/res/values/styles.xml
@@ -324,4 +324,15 @@
         <item name="android:layout_weight">1</item>
 
     </style>
+
+    <!--<style name="Widget.HorizontalProgressBar" parent="android:Widget.ProgressBar.Horizontal">-->
+        <!--<item name="android:progressDrawable">-->
+            <!--@drawable/progress_horizontal_holo_light-->
+        <!--</item>-->
+        <!--<item name="android:indeterminateDrawable">-->
+            <!--@drawable/progress_indeterminate_horizontal_holo_light-->
+        <!--</item>-->
+        <!--<item name="android:minHeight">16dp</item>-->
+        <!--<item name="android:maxHeight">16dp</item>-->
+    <!--</style>-->
 </resources>
